qt6/gen_qabstracteventdispatcher.h

class QAbstractEventDispatcher;
typedef QAbstractEventDispatcher::TimerInfo QAbstractEventDispatcher__TimerInfo;
class QAbstractEventDispatcher__TimerInfo;
class QAbstractNativeEventFilter;
class QMetaObject;
class QObject;
class QSocketNotifier;
class QThread;
typedef struct QAbstractEventDispatcher QAbstractEventDispatcher;
typedef struct QAbstractEventDispatcher__TimerInfo QAbstractEventDispatcher__TimerInfo;
typedef struct QAbstractNativeEventFilter QAbstractNativeEventFilter;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSocketNotifier QSocketNotifier;
typedef struct QThread QThread;
QMetaObject* QAbstractEventDispatcher_metaObject(const QAbstractEventDispatcher* self);
void* QAbstractEventDispatcher_metacast(QAbstractEventDispatcher* self, const char* param1);
int QAbstractEventDispatcher_metacall(QAbstractEventDispatcher* self, int param1, int param2, void** param3);
struct miqt_string QAbstractEventDispatcher_tr(const char* s);
QAbstractEventDispatcher* QAbstractEventDispatcher_instance();
bool QAbstractEventDispatcher_processEvents(QAbstractEventDispatcher* self, int flags);
void QAbstractEventDispatcher_registerSocketNotifier(QAbstractEventDispatcher* self, QSocketNotifier* notifier);
void QAbstractEventDispatcher_unregisterSocketNotifier(QAbstractEventDispatcher* self, QSocketNotifier* notifier);
int QAbstractEventDispatcher_registerTimer(QAbstractEventDispatcher* self, long long interval, int timerType, QObject* object);
void QAbstractEventDispatcher_registerTimer2(QAbstractEventDispatcher* self, int timerId, long long interval, int timerType, QObject* object);
bool QAbstractEventDispatcher_unregisterTimer(QAbstractEventDispatcher* self, int timerId);
bool QAbstractEventDispatcher_unregisterTimers(QAbstractEventDispatcher* self, QObject* object);
struct miqt_array /* of QAbstractEventDispatcher__TimerInfo* */  QAbstractEventDispatcher_registeredTimers(const QAbstractEventDispatcher* self, QObject* object);
int QAbstractEventDispatcher_remainingTime(QAbstractEventDispatcher* self, int timerId);
void QAbstractEventDispatcher_wakeUp(QAbstractEventDispatcher* self);
void QAbstractEventDispatcher_interrupt(QAbstractEventDispatcher* self);
void QAbstractEventDispatcher_startingUp(QAbstractEventDispatcher* self);
void QAbstractEventDispatcher_closingDown(QAbstractEventDispatcher* self);
void QAbstractEventDispatcher_installNativeEventFilter(QAbstractEventDispatcher* self, QAbstractNativeEventFilter* filterObj);
void QAbstractEventDispatcher_removeNativeEventFilter(QAbstractEventDispatcher* self, QAbstractNativeEventFilter* filterObj);
bool QAbstractEventDispatcher_filterNativeEvent(QAbstractEventDispatcher* self, struct miqt_string eventType, void* message, intptr_t* result);
void QAbstractEventDispatcher_aboutToBlock(QAbstractEventDispatcher* self);
void QAbstractEventDispatcher_connect_aboutToBlock(QAbstractEventDispatcher* self, intptr_t slot);
void QAbstractEventDispatcher_awake(QAbstractEventDispatcher* self);
void QAbstractEventDispatcher_connect_awake(QAbstractEventDispatcher* self, intptr_t slot);
struct miqt_string QAbstractEventDispatcher_tr2(const char* s, const char* c);
struct miqt_string QAbstractEventDispatcher_tr3(const char* s, const char* c, int n);
QAbstractEventDispatcher* QAbstractEventDispatcher_instance1(QThread* thread);
const QMetaObject* QAbstractEventDispatcher_staticMetaObject();
void QAbstractEventDispatcher_delete(QAbstractEventDispatcher* self);
QAbstractEventDispatcher__TimerInfo* QAbstractEventDispatcher__TimerInfo_new(int id, int i, int t);
void QAbstractEventDispatcher__TimerInfo_delete(QAbstractEventDispatcher__TimerInfo* self);